--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -13,8 +13,8 @@
         </p>
         <p>
             My first programming language was C++, but I also really like JavaScript and enjoy learning the ins and outs of any language.
-            I've recently been enjoying learning Angular 9, which this website is written in, as well as React. <br/><br/>
-            I'm really looking to join a company where I can apply the things I've been learning to bring value and make a difference with my work.<br id="programming"/>
+            I've recently had fun learning Angular 9, which this website is written in, as well as React. <br/><br/>
+            I'm looking to join a company where I can apply the things I've been learning to bring value and make a difference with my work.<br id="programming"/>
         </p>
     </div>
 </div>
