--- a/src/app/proficiencies/proficiencies.component.html
+++ b/src/app/proficiencies/proficiencies.component.html
@@ -1,129 +1,89 @@
-
-  <h1>Programming Proficiency</h1>
-  <div class="languageSection">
-    <h2>Desktop:</h2>
+<h1>Programming Proficiency</h1>
+<div class="languageSection">
+  <h2>Desktop:</h2>
   <mat-card>
     <mat-card-title>C++</mat-card-title>
     <mat-card-content>
-      <mat-progress-bar
-      [color]="color"
-      mode="determinate"
-      value=90>
-    </mat-progress-bar>
+      <mat-progress-bar [color]="color" mode="determinate" value="70">
+      </mat-progress-bar>
     </mat-card-content>
 
     <mat-card-title>Java</mat-card-title>
     <mat-card-content>
-      <mat-progress-bar
-      [color]="color"
-      mode="determinate"
-      value=75>
-    </mat-progress-bar>
+      <mat-progress-bar [color]="color" mode="determinate" value="45">
+      </mat-progress-bar>
     </mat-card-content>
 
     <mat-card-title>C#</mat-card-title>
     <mat-card-content>
-      <mat-progress-bar
-      [color]="color"
-      mode="determinate"
-      value=75>
-    </mat-progress-bar>
+      <mat-progress-bar [color]="color" mode="determinate" value="60">
+      </mat-progress-bar>
     </mat-card-content>
 
     <mat-card-title>Python</mat-card-title>
     <mat-card-content>
-      <mat-progress-bar
-      [color]="color"
-      mode="determinate"
-      value=65>
-    </mat-progress-bar>
+      <mat-progress-bar [color]="color" mode="determinate" value="40">
+      </mat-progress-bar>
     </mat-card-content>
   </mat-card>
-  </div>
+</div>
 
-  <div class="languageSection">
-    <h2>Web:</h2>
-    <mat-card>
+<div class="languageSection">
+  <h2>Web:</h2>
+  <mat-card>
+    <mat-card-content>
+      <mat-card-title>JavaScript</mat-card-title>
+      <mat-card-content>
+        <mat-progress-bar [color]="color2" mode="determinate" value="75">
+        </mat-progress-bar>
+      </mat-card-content>
 
-    <mat-card-content>   
-          <mat-card-title>JavaScript</mat-card-title>
-          <mat-card-content>
-            <mat-progress-bar
-              [color]="color"
-              mode="determinate"
-              value=90>
-            </mat-progress-bar>
-          </mat-card-content>
+      <mat-card-title>CSS</mat-card-title>
+      <mat-card-content>
+        <mat-progress-bar [color]="color2" mode="determinate" value="65">
+        </mat-progress-bar>
+      </mat-card-content>
 
-          
-          <mat-card-title>CSS</mat-card-title>
-          <mat-card-content>
-            <mat-progress-bar
-              [color]="color"
-              mode="determinate"
-              value=65>
-            </mat-progress-bar>
-          </mat-card-content>
+      <mat-card-title>HTML</mat-card-title>
+      <mat-card-content>
+        <mat-progress-bar [color]="color2" mode="determinate" value="80">
+        </mat-progress-bar>
+      </mat-card-content>
 
-          <mat-card-title>HTML</mat-card-title>
-          <mat-card-content>
-            <mat-progress-bar
-              [color]="color"
-              mode="determinate"
-              value=80>
-            </mat-progress-bar>
-          </mat-card-content>
-        
-          <mat-card-title>PHP</mat-card-title>
-          <mat-card-content>
-            <mat-progress-bar
-              [color]="color"
-              mode="determinate"
-              value=70>
-            </mat-progress-bar>
-          </mat-card-content>
+      <mat-card-title>PHP</mat-card-title>
+      <mat-card-content>
+        <mat-progress-bar [color]="color2" mode="determinate" value="50">
+        </mat-progress-bar>
+      </mat-card-content>
     </mat-card-content>
   </mat-card>
-  </div>
+</div>
 
-  <div class="languageSection">
-    <h2>Frameworks:</h2>
+<div class="languageSection">
+  <h2>Frameworks:</h2>
   <mat-card>
     <mat-card-title>React</mat-card-title>
     <mat-card-content>
-      <mat-progress-bar
-      [color]="color"
-      mode="determinate"
-      value=65>
-    </mat-progress-bar>
+      <mat-progress-bar [color]="color" mode="determinate" value="65">
+      </mat-progress-bar>
     </mat-card-content>
 
     <mat-card-title>Angular</mat-card-title>
     <mat-card-content>
-      <mat-progress-bar
-      [color]="color"
-      mode="determinate"
-      value=85>
-    </mat-progress-bar>
+      <mat-progress-bar [color]="color" mode="determinate" value="55">
+      </mat-progress-bar>
     </mat-card-content>
 
     <mat-card-title>Material</mat-card-title>
     <mat-card-content>
-      <mat-progress-bar
-      [color]="color"
-      mode="determinate"
-      value=65>
-    </mat-progress-bar>
+      <mat-progress-bar [color]="color" mode="determinate" value="45">
+      </mat-progress-bar>
     </mat-card-content>
 
     <mat-card-title id="experience">Bootstrap</mat-card-title>
     <mat-card-content>
-      <mat-progress-bar
-      [color]="color"
-      mode="determinate"
-      value=75>
-    </mat-progress-bar>
+      <mat-progress-bar [color]="color" mode="determinate" value="55">
+      </mat-progress-bar>
     </mat-card-content>
   </mat-card>
-
-  </div>
+</div>
