--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,25 +1,20 @@
 <div class="contain">
-  <img src="assets/CNMPark.jpg" alt="Connor-and-madeleine" class="pic" />
 
-  <div class="about-header">HI. I'M CONNOR.</div>
-  <div class="about-header__dep">This website is deprecated. Sorry.</div>
-  <div class="about">
-    <p>Let me tell you about myself:</p>
-    <p>
-      I am a Computer Science graduate from Harding University (or I will be, as
-      of 5/09/2020).<br />
-      I love to program, build computers, cook, make knives, and read.<br />
-      I've been married to my wonderful wife, Madeleine, since January 3rd,
-      2020.<br />
-    </p>
-    <p>
-      My first programming language was C++, but I also really like JavaScript
-      and enjoy learning the ins and outs of any language. I've recently had fun
-      learning Angular 9, as well as React. <br /><br />
-      I'm looking to join a company where I can apply the things I've been
-      learning to bring value and make a difference with my work.<br
-        id="programming"
-      />
-    </p>
-  </div>
+    <img src="assets/CNMPark.jpg" alt="Connor-and-madeleine" class="pic">
+
+    <div class="about-header">HI. I'M CONNOR.</div>
+    <div class="about">
+        <p>Let me tell you about myself:</p>
+        <p>
+            I am a Computer Science graduate from Harding University (or I will be, as of 5/09/2020).<br/>
+            I love to program, build computers, cook, make knives, and read.<br/>
+            I've been married to my wonderful wife, Madeleine, since January 3rd, 2020.<br/>
+            
+        </p>
+        <p>
+            My first programming language was C++, but I also really like JavaScript and enjoy learning the ins and outs of any language.
+            I've recently had fun learning Angular 9, which this website is written in, as well as React. <br/><br/>
+            I'm looking to join a company where I can apply the things I've been learning to bring value and make a difference with my work.<br id="programming"/>
+        </p>
+    </div>
 </div>
